# icecream-rs

./: .travis.yml  Cargo.toml  README.md
src/: formatter.rs  lib.rs  lineinfo.rs  macros.rs  main.rs  parsed_backtrace.rs  printer.rs
tests/: assert_stdout_eq.rs  smoke.rs
