[package]
name = "icecream"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/ericchang00/icecream-rs"
homepage = "https://github.com/ericchang00/icecream-rs"
description = "Print debugging with inspection."
authors = ["Eric <ericchang00@gmail.com>"]
license = "MIT"

[dependencies]
backtrace = "0.3"
lazy_static = "1.0"

[dev-dependencies]
gag = "0.1.9"
